--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^9.3.0",
     "next": "15.5.3",
     "react": "19.1.0",
